fix table on mobile (#582)

--- a/input/assets/css/override.less
+++ b/input/assets/css/override.less
@@ -569,3 +569,9 @@ pre:hover .btn-copy {
     text-decoration: none;
   }
 }
+
+.table {
+  display: block;
+  table-layout: fixed;
+  overflow: auto;
+}
